<resources>
    <string name="app_name">tp1</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">phone number</string>
    <string name="valider">valider</string>
    <string name="age">age</string>
    <string name="adresse">Adresse</string>
</resources>